# njit-dm-scratch

./: .envrc  .flake8  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  space.code-workspace
.github/workflows/: pythonpackage.yml
final/: jupyter-notebook-browser  nb.sh  pyproject.toml
final/ext/hdap/: requirements.txt
final/ext/stock-analysis/: requirements.txt
final/notebooks/: 1 - front-matter.ipynb  3.1 - Data EDA.ipynb  3.1 - Data EDA.py  3.2 DT Model Generation.ipynb  3.2 DT Model Generation.py  3.2 SVM Model Generation.ipynb  3.2 SVM Model Generation.py  Untitled-Copy1.ipynb  Untitled.ipynb  experiments-svm.ipynb  experiments-svm2.ipynb  helpers.py  notes.md  pull-data.ipynb  pull-data.py  r 0 - report.md  report.md  scratch-chefboost1.ipynb  svm-from-brownlee.ipynb  svm-scratch.ipynb  t.py
final/notebooks/scratch/: Untitled-Copy1.ipynb  Untitled1.ipynb  experiments-svm.ipynb  experiments-svm2.ipynb  id3-from-scratch.ipynb  linear_separable.ipynb  pipeline.ipynb  scratch iris linear svm.ipynb  svm-scratch.ipynb
final/notebooks/utils/: helpers.py
final/project-report/: 3.2 DT Model Generation.md  final-project-report.md  merged r 3 - report.md  notes.md  r 0 - report.md
final/tests/: test_pyml.py
midterm/: README.docx  README.md  adriver.py  gen.py  main.py  pyproject.toml  requirements.txt
midterm/data/: db_file1.csv  db_file2.csv  db_file3.csv  db_file4.csv  db_file5.csv  gen.py  item.csv  item_set.csv  transactions.csv
midterm/py_apriori/: __init__.py  apriori.py  assoc.py
midterm/tests/: test_py_apriori.py
nb/: Untitled.ipynb  adriver.py  apriori-class.ipynb  apriori-scratch.ipynb  apriori.py  assoc.py  confidence.xlsx  mlxtend.ipynb  notes.md  pyproject.toml  questions.md  space.code-workspace  test_data.csv  usingPandas.ipynb
nb/data/: test3.csv  test4.csv  test_2b.csv
