[tool.poetry]
name = "pyml"
version = "0.1.0"
description = ""
authors = ["Shawn Cicoria <github@cicoria.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
scipy = "^1.4.1"
matplotlib = "^3.2.1"
scikit-learn = "^0.22.2"
seaborn = "^0.10.0"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^2.1.0"
flake8 = "^3.7.9"
autopep8 = "^1.5.1"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
