[tool.poetry]
name = "njit-ml-scratch"
version = "0.1.0"
description = ""
authors = ["Shawn Cicoria <github@cicoria.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
notebook = "^6.0.2"
numpy = "^1.18.1"
scipy = "^1.4.1"
matplotlib = "^3.1.2"
pandas = "^0.25.3"
scikit-learn = "^0.22.1"
jupyter_contrib_nbextensions = "^0.5.1"
watermark = "^2.0.2"
jupyterlab = "^1.2.6"
pylint = "~=2.4.4"
mlxtend = "^0.17.1"

[tool.poetry.dev-dependencies]
rope = "^0.16.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
